# gtm-content-growth-workbench

./: .gitignore  AGENTS.md  README.md  V5_BACKEND_INTEGRATION.md  package-lock.json  package.json  tsconfig.json
arcs-runner/: AGENTS.md  README.md  pyproject.toml  run.py
arcs-runner/joto_arcs_runner/: __init__.py  ledger.py  platforms.py  server.py
arcs-runner/tests/: test_runner_contract.py
browser-extension/: README.md  manifest.json
capture-runner/: README.md  package.json
config/: ai-providers.example.json  channel-rules.json
data/: demo-ai-bot-log.csv  v5-article-type-templates.json  v5-foundation-state.json
database/: schema.sql
design/: low-fi-prototype.md
docs/: MVP-PRD1.md  MVP-PRD2.md  content-growth-dashboard-refactor.md  content-growth-system-v2-clarifications.md  content-growth-system-v2-rules.md  development-plan.md  development-task-list.md  development.md  phase-status.md  phase0-6-verification.md  phase0-asset-audit.md  phase7-runbook.md  prd-v3-content-growth-workbench.md  prd-v3-dev-brief.md  usage.md  wechat-presentation-production.md
imports/: channel-metrics-smoke.csv
review/: 2026-06-16-context-archive.md
scripts/: check-mysql-connection.mjs  check-v5-knowledge-governance-schema.mjs  check-v5-schema-cutover.mjs  check-v5-weike-guardrail-pilot.mjs  export-knowledge-base-metadata.mjs  formal-publish-contracts.test.mjs  init-mysql-schema.mjs  init-v5-monthly-schema.mjs  load-project-env.mjs  mysql-state-store.mjs  parse-pdf-text.mjs  smoke-browser-isolated.mjs  smoke-browser.mjs  smoke-interactions.mjs  smoke-pages.mjs  (+28 more)
(+419 files in other folders)
