[project]
name = "joto-arcs-publish-runner"
version = "0.1.0"
description = "Loopback-only Arcs/DrissionPage executor for JOTO formal publishing"
requires-python = ">=3.10"
dependencies = [
  "DrissionPage==4.1.0.14"
]

[project.scripts]
joto-arcs-runner = "joto_arcs_runner.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joto_arcs_runner"]
